--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
    </div>
   
    <section class="whyus">
-    <div class="header">
+    <div class="header"  data-aos="fade-up"
+    data-aos-anchor-placement="bottom-bottom">
         <h1> ليه <span>ذاكر؟</span></h1>
         <img src="icons_imgs/line01.png"  alt="" srcset="" class="imgwhy">
     </div>
