--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
    <section class="teachers">
     <h1 data-aos="fade-right">مدرسينا</h1>
     <img data-aos="fade-left" src="icons_imgs/line04.png" alt="">
-    <div class="teacher-cards">
+    <div class="teacher-cards"  data-aos="fade-up"
+    data-aos-anchor-placement="bottom-bottom">
         <div class="tcard1">
             <i class='bx bxs-face'></i>
            <h1> مستر عمر اسماعيل
